2015.05.06 Kentaro Fukuchi <kentaro@fukuchi.org>
	* qrenc.c:
	  - New option "--svg-path" has been added, that uses a single path
	    instead of multiple rectangles to draw the modules.

2015.05.05 Kentaro Fukuchi <kentaro@fukuchi.org>
	* qrencode.1.in, qrenc.c:
	  - Usage improved. (closes #62) (Thanks to @minus7)
	  - Typo fix. (Thanks to Ian Sweet (@Isweet))
	* README, README.md:
	  - The list of contributors updated: '@' prefix added for github
	    usernames.
	* qrenc.c:
	  - X Pixmap (XPM) support has been added. (closes #52)
	    (Thanks to @tklauser)
	* qrspec.h, mqrspec.h, qrencode.h:
	  - empty descriptions of some @params are filled.
	* rsecc.[ch], README:
	  - Short note about the credit has been improved.
	* Some code cleanups.

2015.05.04 Kentaro Fukuchi <kentaro@fukuchi.org>
	* qrenc.c:
	  - Merge pull request #63 from tklauser/qrenc-array-overflow-fix
	  - qrenc: Fix array overrun in color_set (Thanks to @tklauser and
	    @win32asm)
	* split.c:
	  - Merge pull request #67 from siggi-heltau/patch-1
	  - The variable name "new" has been renamed to "newstring" because "new"
	    is a reserved word in C++. (Thanks to @siggi-heltau)
	* qrenc.c:
	  - Added -r option to read input data from a file in addition to STDIN
	    and the command line. (cherry-picked from #68)
		(Thanks to Robert Petersen)
	  - Typo fix. (cherry-picked from #68) (Thanks to Robert Petersen)
	  - long option "readin" has been changed to "read-from".
	* qrencode.1.in:
	  - Updated the usage.
	* README:
	  - Updated the list of contributors.
	* tests/Makefile.am
	  - Added URI_testset.inc to EXTRA_DIST.
	* .gitignore
	  - Added some patterns to ignore some generated files. (Thanks to
	    @tklauser, closes #64)

2014.09.23 Kentaro FUKUCHI <kentaro@fukuchi.org>
	* README, README.md:
	  - Some typo fixes. (Thanks to Danomi Manchego)

2014.09.18 Kentaro FUKUCHI <kentaro@fukuchi.org>
	* tests/view_qrcode.c:
	  - Rollbacked the previous change (6a4b2e3710b) around the main part.